--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run compile-grammar && babel -d lib src",
+    "build": "npm run compile-grammar && webpack",
     "compile-grammar": "nearleyc ./src/grammar.ne --out ./src/grammar.js;",
     "pretest": "npm run build;",
-    "test": "ava --verbose;"
+    "test": "ava --verbose;",
+    "webpack": "webpack;"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,22 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "ava": "^0.25.0",
     "babel-loader": "^8.0.2",
+    "babel-plugin-array-includes": "^2.0.3",
+    "clean-webpack-plugin": "^0.1.19",
     "nearley": "^2.15.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.0.0"
   }
 }
