--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "babel-loader": "^8.0.2",
     "babel-plugin-array-includes": "^2.0.3",
     "clean-webpack-plugin": "^0.1.19",
+    "moo": "^0.4.3",
     "nearley": "^2.15.1",
+    "render-js": "^1.29.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0"
