--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run compile-grammar && webpack",
-    "compile-grammar": "nearleyc ./src/grammar.ne --out ./src/grammar.js;",
+    "build": "npm run webpack;",
+    "grammars": "nearleyc ./src/grammar.ne --out ./src/grammar.js;",
+    "nearleyc": "nearleyc",
+    "pregrammars": "webpack --config webpack.pre.grammars.babel.js;",
     "pretest": "npm run build;",
+    "prewebpack": "npm run grammars;",
     "test": "ava --verbose;",
-    "webpack": "webpack;"
+    "webpack": "webpack",
+    "x": "nearleyc ./x/indent.ne --out ./x/indent.js && (cat ./x/template.nsl | nearley-test ./x/indent.js)"
   },
   "repository": {
     "type": "git",
@@ -27,9 +31,10 @@
   "homepage": "https://github.com/ComLock/nearley-slm#readme",
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
@@ -40,9 +45,10 @@
     "clean-webpack-plugin": "^0.1.19",
     "moo": "^0.4.3",
     "nearley": "^2.15.1",
+    "regenerator-runtime": "^0.12.1",
     "render-js": "^1.29.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.17.2",
+    "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
